Fri Aug 11 19:09:30 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API change:  Replaced OmWritableDatabase::end_transaction() by
	  OmWritableDatabase::commit_transaction() and
	  OmWritableDatabase::cancel_transaction().

	* IRDatabase no longer inherits from IndexerDestination: obselete
	  class.

	* Modified IRDatabase to support new writable database API model,
	  giving it public methods to match.  These public methods ensure
	  that the sessions and transactions are appropriately started
	  and ended, and then call private virtual do_* methods, which
	  are overridden to perform the actions.

	* Modified backend Database classes to have stub methods so the
	  system works with the new writable database model.

Fri Aug 11 18:42:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Yet more Python updates.  17 out of the 20 tests currently
	  translated into Python pass.

Fri Aug 11 14:14:28 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More Python updates - 9 out of the 20 tests now pass.

Thu Aug 10 18:05:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Updates the Python/SWIG bindings.  3 tests (out of 20 which are
	  translated) currently pass.

Thu Aug 10 17:12:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add stub implementations for new methods in OmWritableDatabase,
	  which throw OmUnimplementedError exceptions, so that the python
	  port can proceed.

Thu Aug 10 12:01:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.2.1

Wed Aug  9 17:21:33 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed annoying exception messages from omprogsrv (which turned
	  up in net->absentfile1 test)

Wed Aug  9 17:05:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Apitest now runs with the network backend by default.  Two of the
	  tests are only run for the local databases.
